Update po files

--- a/i18n/po/ja_JP/.github/ISSUE_TEMPLATE/insights.md.po
+++ b/i18n/po/ja_JP/.github/ISSUE_TEMPLATE/insights.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 04:02+0000\n"
+"POT-Creation-Date: 2021-02-05 23:48+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,22 +16,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: YAML Front Matter: about
-#: upstream/.github/ISSUE_TEMPLATE/insights.md:1
+#. type: Plain text
+#: upstream/.github/ISSUE_TEMPLATE/insights.md:7
 #, no-wrap
-msgid "Suggest a episode topic and/or guest for Quarkus Insights"
-msgstr ""
-
-#. type: YAML Front Matter: labels
-#: upstream/.github/ISSUE_TEMPLATE/insights.md:1
-#, no-wrap
-msgid "insights"
-msgstr ""
-
-#. type: YAML Front Matter: name
-#: upstream/.github/ISSUE_TEMPLATE/insights.md:1
-#, no-wrap
-msgid "Quarkus Insights"
+msgid ""
+"name: Quarkus Insights\n"
+"about: Suggest a episode topic and/or guest for Quarkus Insights\n"
+"title: ''\n"
+"labels: insights\n"
+"assignees: ''\n"
 msgstr ""
 
 #. type: Plain text
