--- a/i18n/po/ja_JP/index.md.po
+++ b/i18n/po/ja_JP/index.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 04:02+0000\n"
+"POT-Creation-Date: 2021-02-05 23:48+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,14 +16,22 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: YAML Front Matter: layout
-#: upstream/index.md:1
+#. type: Title #
+#: upstream/index.md:2
 #, no-wrap
-msgid "index"
+msgid "Feel free to add content and custom Front Matter to this file."
 msgstr ""
 
-#. type: YAML Front Matter: title
-#: upstream/index.md:1
+#. type: Title #
+#: upstream/index.md:3
 #, no-wrap
-msgid "Quarkus - Supersonic Subatomic Java"
+msgid "To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults"
+msgstr ""
+
+#. type: Plain text
+#: upstream/index.md:7
+#, no-wrap
+msgid ""
+"layout: index\n"
+"title: Quarkus - Supersonic Subatomic Java\n"
 msgstr ""
