--- a/i18n/po/ja_JP/.github/ISSUE_TEMPLATE/bug_report.md.po
+++ b/i18n/po/ja_JP/.github/ISSUE_TEMPLATE/bug_report.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 04:02+0000\n"
+"POT-Creation-Date: 2021-02-05 23:48+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,22 +16,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: YAML Front Matter: about
-#: upstream/.github/ISSUE_TEMPLATE/bug_report.md:1
+#. type: Plain text
+#: upstream/.github/ISSUE_TEMPLATE/bug_report.md:7
 #, no-wrap
-msgid "Report a bug on quarkus.io website"
-msgstr ""
-
-#. type: YAML Front Matter: labels
-#: upstream/.github/ISSUE_TEMPLATE/bug_report.md:1
-#, no-wrap
-msgid "kind/bug"
-msgstr ""
-
-#. type: YAML Front Matter: name
-#: upstream/.github/ISSUE_TEMPLATE/bug_report.md:1
-#, no-wrap
-msgid "Bug report"
+msgid ""
+"name: Bug report\n"
+"about: Report a bug on quarkus.io website\n"
+"title: ''\n"
+"labels: kind/bug\n"
+"assignees: ''\n"
 msgstr ""
 
 #. type: Plain text
