--- a/i18n/po/ja_JP/404.md.po
+++ b/i18n/po/ja_JP/404.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 04:02+0000\n"
+"POT-Creation-Date: 2021-02-05 23:48+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,16 +16,12 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: YAML Front Matter: layout
-#: upstream/404.md:1
+#. type: Plain text
+#: upstream/404.md:4
 #, no-wrap
-msgid "error-page"
-msgstr ""
-
-#. type: YAML Front Matter: permalink
-#: upstream/404.md:1
-#, no-wrap
-msgid "/404.html"
+msgid ""
+"layout: error-page\n"
+"permalink: /404.html\n"
 msgstr ""
 
 #. type: Title #
