--- a/i18n/po/ja_JP/_redirects/guides/tika-guide.md.po
+++ b/i18n/po/ja_JP/_redirects/guides/tika-guide.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 04:02+0000\n"
+"POT-Creation-Date: 2021-02-05 23:48+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,14 +16,10 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: YAML Front Matter: newUrl
-#: upstream/_redirects/guides/tika-guide.md:1
+#. type: Plain text
+#: upstream/_redirects/guides/tika-guide.md:4
 #, no-wrap
-msgid "/guides/tika"
-msgstr ""
-
-#. type: YAML Front Matter: permalink
-#: upstream/_redirects/guides/tika-guide.md:1
-#, no-wrap
-msgid "/guides/tika-guide/index.html"
+msgid ""
+"permalink: /guides/tika-guide/index.html\n"
+"newUrl: /guides/tika\n"
 msgstr ""
