--- a/i18n/po/ja_JP/_redirects/roadmap.md.po
+++ b/i18n/po/ja_JP/_redirects/roadmap.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 04:02+0000\n"
+"POT-Creation-Date: 2021-02-05 23:48+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,20 +16,11 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: YAML Front Matter: external
-#: upstream/_redirects/roadmap.md:1
+#. type: Plain text
+#: upstream/_redirects/roadmap.md:5
 #, no-wrap
-msgid "true"
-msgstr ""
-
-#. type: YAML Front Matter: newUrl
-#: upstream/_redirects/roadmap.md:1
-#, no-wrap
-msgid "https://github.com/orgs/quarkusio/projects/5"
-msgstr ""
-
-#. type: YAML Front Matter: permalink
-#: upstream/_redirects/roadmap.md:1
-#, no-wrap
-msgid "/roadmap/"
+msgid ""
+"permalink: /roadmap/\n"
+"newUrl: https://github.com/orgs/quarkusio/projects/5\n"
+"external: true\n"
 msgstr ""
