--- a/i18n/po/ja_JP/blog.md.po
+++ b/i18n/po/ja_JP/blog.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 04:02+0000\n"
+"POT-Creation-Date: 2021-02-05 23:48+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,26 +16,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: YAML Front Matter: layout
-#: upstream/blog.md:1
+#. type: Plain text
+#: upstream/blog.md:7
 #, no-wrap
-msgid "blog"
-msgstr ""
-
-#. type: YAML Front Matter: pagination enabled
-#: upstream/blog.md:1
-#, no-wrap
-msgid "true"
-msgstr ""
-
-#. type: YAML Front Matter: permalink
-#: upstream/blog.md:1
-#, no-wrap
-msgid "/blog/"
-msgstr ""
-
-#. type: YAML Front Matter: title
-#: upstream/blog.md:1
-#, no-wrap
-msgid "Quarkus - Blog"
+msgid ""
+"layout: blog\n"
+"title: \"Quarkus - Blog\"\n"
+"permalink: /blog/\n"
+"pagination: \n"
+"  enabled: true\n"
 msgstr ""
