--- a/i18n/po/ja_JP/community.md.po
+++ b/i18n/po/ja_JP/community.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 04:02+0000\n"
+"POT-Creation-Date: 2021-02-05 23:48+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,20 +16,11 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: YAML Front Matter: layout
-#: upstream/community.md:1
+#. type: Plain text
+#: upstream/community.md:5
 #, no-wrap
-msgid "community"
-msgstr ""
-
-#. type: YAML Front Matter: permalink
-#: upstream/community.md:1
-#, no-wrap
-msgid "/community/"
-msgstr ""
-
-#. type: YAML Front Matter: title
-#: upstream/community.md:1
-#, no-wrap
-msgid "Community"
+msgid ""
+"layout: community\n"
+"title: Community\n"
+"permalink: /community/\n"
 msgstr ""
