--- a/i18n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
+++ b/i18n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
@@ -665,7 +665,7 @@ msgstr "jvm `redhat-openjdk-18/openjdk18-openshift` 画像は `/deployments`"
 #. type: delimited block =
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:302
 #, fuzzy
-msgid "native `\bubi-quarkus-native-s2i:19.3.1-java11` image is `/home/quarkus`"
+msgid "native  `ubi-quarkus-native-s2i:19.3.1-java11` image is `/home/quarkus`"
 msgstr "ネイティブ `ubi-quarkus-native-s2i:19.3.1-java11` 画像は `/home/quarkus`"
 
 #. type: Block title
