--- a/i18n/po/ja_JP/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc.po
@@ -2,41 +2,40 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-06 09:47+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:1
-#, no-wrap, fuzzy
+#, fuzzy, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:8
-#, no-wrap, fuzzy
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.11.1.Final released - Bugfixes'\n"
 "date: 2021-01-27\n"
 "tags: release\n"
-"synopsis: 1.11.1.Final fixes issues and comes with documentation "
-"improvements.\n"
+"synopsis: 1.11.1.Final fixes issues and comes with documentation improvements.\n"
 "author: gsmet\n"
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: Quarkus 1.11.1.1.Finalリリース - バグフィックス\n"
+"title: Quarkus 1.11.1.Finalリリース - バグフィックス\n"
 "date: 2021-01-27\n"
 "tags: release\n"
 "synopsis: 1.11.1.Finalでは問題を修正し、ドキュメントの改善を行いました。\n"
@@ -45,43 +44,28 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:11
-#, fuzzy
-msgid ""
-"1.11.1.Final is a maintenance release fixing bugs and improving the "
-"documentation."
-msgstr "1.11.1.1.Finalは、バグの修正とドキュメントの改善を行うメンテナンスリリースです。"
+msgid "1.11.1.Final is a maintenance release fixing bugs and improving the documentation."
+msgstr "1.11.1.Finalは、バグの修正とドキュメントの改善を行うメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:14
-#, fuzzy
-msgid ""
-"Thanks to all the contributors who reported issues and provided reproducers: "
-"it allowed us to make steady progress on fixing issues."
-msgstr "問題点を報告し、複製を提供してくれたすべての貢献者に感謝します。"
+msgid "Thanks to all the contributors who reported issues and provided reproducers: it allowed us to make steady progress on fixing issues."
+msgstr "問題点を報告し、再現手順を提供してくれたすべての貢献者に感謝します。問題の修正の確かな進捗に繋がりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:17
-#, fuzzy
-msgid ""
-"Also a big thanks to all the contributors providing pull requests, be they "
-"for the code or the documentation!"
+msgid "Also a big thanks to all the contributors providing pull requests, be they for the code or the documentation!"
 msgstr "また、コードであれドキュメントであれ、プルリクエストを提供してくれたすべての貢献者にも感謝しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:19
-#, fuzzy
 msgid "1.11.1.Final is a safe upgrade for everyone using Quarkus 1.11."
 msgstr "1.11.1.Finalは、Quarkus 1.11を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:21
-#, fuzzy
-msgid ""
-"If you are not using 1.11 already, please refer to the https://github.com/"
-"quarkusio/quarkus/wiki/Migration-Guide-1.11[1.11 migration guide]."
-msgstr ""
-"すでに1.11を使用していない場合は、1. link:https://github.com/quarkusio/quarkus/wiki/"
-"Migration-Guide-1.11[11移行ガイド] を参照してください。"
+msgid "If you are not using 1.11 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.11[1.11 migration guide]."
+msgstr "まだ1.11を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.11[1.11移行ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:22
@@ -97,25 +81,19 @@ msgstr "GraalVM"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:27
-#, fuzzy
 msgid "The recommended GraalVM version is now GraalVM 20.3.1."
 msgstr "GraalVMの推奨バージョンはGraalVM 20.3.1になりました。"
 
 #. type: Title ===
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:28
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Full changelog"
-msgstr "フルチェンジログ"
+msgstr "完全な変更ログ"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:31
-#, fuzzy
-msgid ""
-"You can get https://github.com/quarkusio/quarkus/releases/tag/1.11.1."
-"Final[the full changelog of 1.11.1.Final on GitHub]."
-msgstr ""
-"link:https://github.com/quarkusio/quarkus/releases/tag/1.11.1.Final[1.11.1.1."
-"Finalの完全な変更履歴はGitHubで] 入手できます。"
+msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.11.1.Final[the full changelog of 1.11.1.Final on GitHub]."
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.11.1.Final[GitHubで1.11.1.Finalの完全な変更履歴] を入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:32
@@ -125,43 +103,30 @@ msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:35
-msgid ""
-"We value your feedback a lot so please report bugs, ask for improvements... "
-"Let's build something great together!"
+msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
 msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう！"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:37
-msgid ""
-"If you are a Quarkus user or just curious, don't be shy and join our "
-"welcoming community:"
+msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
 msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい！："
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:39
-msgid ""
-"provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
+msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
 msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:40
-msgid ""
-"craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
+msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
 msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:41
-msgid ""
-"discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https:/"
-"/groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
-"https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/"
-"quarkus-dev[メーリングリスト] でディスカッションに参加"
+msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-27-quarkus-1-11-1-final-released.adoc:42
-msgid ""
-"ask your questions on https://stackoverflow.com/questions/tagged/"
-"quarkus[Stack Overflow]."
-msgstr ""
-"https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
+msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
