--- a/i18n/po/ja_JP/_posts/2021-01-26-quarkus-newsletter-9.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-26-quarkus-newsletter-9.adoc.po
@@ -2,29 +2,29 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-06 10:08+0900\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-26-quarkus-newsletter-9.adoc:1
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-26-quarkus-newsletter-9.adoc:9
-#, no-wrap, fuzzy
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Newsletter #9'\n"
@@ -36,39 +36,25 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus Newsletter #9'\n"
+"title: 'Quarkus ニュースレター #9'\n"
 "date: 2021-01-29\n"
 "tags: newsletter\n"
-"synopsis: クオークス周辺の最新オンラインコンテンツ\n"
+"synopsis: クオークス関連の最新オンラインコンテンツ\n"
 "author: maxandersen\n"
 "bibquery: [\"pub.urldate > '2020-09-28'\", \"pub.urldate <= '2021-01-29'\"]\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-26-quarkus-newsletter-9.adoc:12
-#, fuzzy
-msgid ""
-"We took a little break, but now another Newsletter round of stories found!"
-msgstr "私たちは少し休憩を取ったが、今、話の別のニュースレターのラウンドが見つかりました"
+msgid "We took a little break, but now another Newsletter round of stories found!"
+msgstr "少しお休みをとっていましたが、かなりの量の見つかったストーリーのニュースレターを発行します！"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-26-quarkus-newsletter-9.adoc:14
-#, fuzzy
-msgid ""
-"For the news below - give it a read and if you feel something is missing or "
-"have an article coming out for future Quarkus Newsletter install the https://"
-"github.com/quarkusio/url2quarkuspub[bookmarklet] on your laptop and phone to "
-"easily submit a story. If you prefer the manual way please https://github."
-"com/quarkusio/quarkusio.github.io/issues[open an issue] with a short "
-"description and a url."
-msgstr ""
-"もし、何かが欠けていると感じたり、将来のQuarkus Newsletterのために記事をお持ちの場合は、 link:https://github."
-"com/quarkusio/url2quarkuspub[ブックマークレットを] "
-"ラップトップや携帯電話にインストールして、簡単に記事を投稿することができます。あなたが手動の方法を好む場合は、短い説明とURLで link:https:/"
-"/github.com/quarkusio/quarkusio.github.io/issues[問題を開い] てください。"
+msgid "For the news below - give it a read and if you feel something is missing or have an article coming out for future Quarkus Newsletter install the https://github.com/quarkusio/url2quarkuspub[bookmarklet] on your laptop and phone to easily submit a story. If you prefer the manual way please https://github.com/quarkusio/quarkusio.github.io/issues[open an issue] with a short description and a url."
+msgstr "以下のニュースを読んで、もし、何かが欠けていると感じたり、将来のQuarkus ニュースレターのために記事をお持ちの場合は、 link:https://github.com/quarkusio/url2quarkuspub[ブックマークレット] をラップトップやスマートフォンにインストールして、簡単に記事を投稿することができます。あなたが手動の方法を好む場合は、短い説明とURLを link:https://github.com/quarkusio/quarkusio.github.io/issues[Issueを登録] してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-26-quarkus-newsletter-9.adoc:15
-#, fuzzy
 msgid "Enjoy!"
-msgstr "楽しもう"
+msgstr "楽しんで！"
