--- a/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
@@ -2,29 +2,29 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-06 10:44+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:1
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:7
-#, no-wrap, fuzzy
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for IntelliJ 1.3.0 released!'\n"
@@ -34,7 +34,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus Tools for IntelliJ 1.3.0 released!\n"
+"title: 'Quarkus Tools for IntelliJ 1.3.0 がリリースされました！\n"
 "date: 2021-01-15\n"
 "tags: announcement ide\n"
 "author: jeffmaury\n"
@@ -42,13 +42,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:12
-msgid ""
-"We are very pleased to announce the 1.3.0 release of Quarkus Tools for "
-"IntelliJ.  This release brings codestarts support in the Quarkus project "
-"wizard."
-msgstr ""
-"Quarkus Tools for IntelliJの1.3."
-"0リリースを発表できることを大変嬉しく思います。このリリースでは、Quarkusプロジェクトウィザードにcodestartsのサポートが追加されました。"
+msgid "We are very pleased to announce the 1.3.0 release of Quarkus Tools for IntelliJ.  This release brings codestarts support in the Quarkus project wizard."
+msgstr "Quarkus Tools for IntelliJの1.3.0リリースを発表できることを大変嬉しく思います。このリリースでは、Quarkusプロジェクトウィザードにcodestartsのサポートが追加されました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:13
@@ -58,13 +53,8 @@ msgstr "Codestarts"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:17
-msgid ""
-"The Quarkus project wizard adds a new codestarts option, allowing to enable/"
-"disable codestarts generation for Quarkus extensions that support this "
-"feature."
-msgstr ""
-"Quarkusプロジェクトウィザードに新しいcodestartsオプションが追加され、この機能をサポートするQuarkusエクステンションのcodestarts生成を有効/"
-"無効にすることができるようになりました。"
+msgid "The Quarkus project wizard adds a new codestarts option, allowing to enable/disable codestarts generation for Quarkus extensions that support this feature."
+msgstr "Quarkusプロジェクトウィザードに新しいcodestartsオプションが追加され、この機能をサポートするQuarkusエクステンションのcodestarts生成を有効/無効にすることができるようになりました。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:18
@@ -80,12 +70,8 @@ msgstr "将来"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:25
-msgid ""
-"If you have any questions, suggestions or feedback, by all means please "
-"https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
-msgstr ""
-"ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-"
-"quarkus/issues[イシューを開いて]ください。"
+msgid "If you have any questions, suggestions or feedback, by all means please https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
+msgstr "ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-quarkus/issues[Issueを開いてください]。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:27
@@ -100,14 +86,10 @@ msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:31
-#, fuzzy
-msgid ""
-"GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
+msgid "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
 msgstr "GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:31
-#, fuzzy
-msgid ""
-"Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
-msgstr "課題を開く: https://github.com/redhat-developer/intellij-quarkus/issues"
+msgid "Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
+msgstr "Issueを開く: https://github.com/redhat-developer/intellij-quarkus/issues"
