--- a/i18n/po/ja_JP/_posts/2021-02-02-quarkus-insights-qanda.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-02-02-quarkus-insights-qanda.adoc.po
@@ -2,41 +2,40 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-06 10:56+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-02-quarkus-insights-qanda.adoc:1
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-02-quarkus-insights-qanda.adoc:8
-#, no-wrap, fuzzy
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: Quarkus Insights Q&A\n"
 "date: 2021-02-02\n"
 "tags: insights\n"
-"synopsis: Next Monday (8th Feb 21), we will do Quarkus Insights based on "
-"your questions.\n"
+"synopsis: Next Monday (8th Feb 21), we will do Quarkus Insights based on your questions.\n"
 "author: maxandersen\n"
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: Quarkus Insights Q&amp;A\n"
+"title: Quarkus Insights Q&A\n"
 "date: 2021-02-02\n"
 "tags: insights\n"
 "synopsis: 来週の月曜日（2月8日）は、ご質問をもとにQuarkus Insightsを行います。\n"
@@ -45,39 +44,20 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-02-02-quarkus-insights-qanda.adoc:11
-#, fuzzy
 msgid "On the next Quarkus Insights episode, we are trying something new."
 msgstr "次のQuarkus Insightsのエピソードでは、新しいことを試しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-02-quarkus-insights-qanda.adoc:14
-#, fuzzy
-msgid ""
-"We will cover the most often asked questions we have seen and any question "
-"tagged with `#quarkusinsights` on our various social media presences: https:/"
-"/twitter.com/search?q=%23quarkusinsights[Twitter], https://www.facebook.com/"
-"hashtag/quarkusinsights/[Facebook], https://www.linkedin.com/search/results/"
-"content/?keywords=%23quarkusinsights&origin=GLOBAL_SEARCH_HEADER[LinkedIn] "
-"or on the https://www.youtube.com/watch?v=OV-ZnvHoQIk[youtube event] "
-"directly."
-msgstr ""
-"私たちは、私たちが見てきた最も頻繁に質問された質問や、私たちの様々なソーシャルメディアのプレゼンスで `#quarkusinsights` "
-"とタグ付けされた任意の質問をカバーします。 link:https://twitter.com/search?q="
-"%23quarkusinsights[Twitter] 、 link:https://www.facebook.com/hashtag/"
-"quarkusinsights/[Facebook] 、 link:https://www.linkedin.com/search/results/"
-"content/?keywords=%23quarkusinsights&origin=GLOBAL_SEARCH_HEADER[LinkedIn] "
-"、または link:https://www.youtube.com/watch?v=OV-ZnvHoQIk[youtubeイベント] で直接。"
+msgid "We will cover the most often asked questions we have seen and any question tagged with `#quarkusinsights` on our various social media presences: https://twitter.com/search?q=%23quarkusinsights[Twitter], https://www.facebook.com/hashtag/quarkusinsights/[Facebook], https://www.linkedin.com/search/results/content/?keywords=%23quarkusinsights&origin=GLOBAL_SEARCH_HEADER[LinkedIn] or on the https://www.youtube.com/watch?v=OV-ZnvHoQIk[youtube event] directly."
+msgstr "私たちは、私たちが見てきた最も頻繁に質問された質問や、私たちの様々なソーシャルメディアで `#quarkusinsights` とタグ付けされた任意の質問をカバーします（ link:https://twitter.com/search?q=%23quarkusinsights[Twitter] 、 link:https://www.facebook.com/hashtag/quarkusinsights/[Facebook] 、 link:https://www.linkedin.com/search/results/content/?keywords=%23quarkusinsights&origin=GLOBAL_SEARCH_HEADER[LinkedIn] 、または link:https://www.youtube.com/watch?v=OV-ZnvHoQIk[youtubeイベント] で直接）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-02-quarkus-insights-qanda.adoc:16
-#, fuzzy
-msgid ""
-"If you have a question about Quarkus you would like answered let us know on "
-"one of thoses sites."
-msgstr "Quarkusに関する質問にお答えしたい場合は、以下のいずれかのサイトでお知らせください。"
+msgid "If you have a question about Quarkus you would like answered let us know on one of thoses sites."
+msgstr "答えてほしいQuarkusに関する質問がある場合は、以下のいずれかのサイトでお知らせください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-02-quarkus-insights-qanda.adoc:17
-#, fuzzy
 msgid "See you all Monday!"
-msgstr "月曜日に会いましょう！"
+msgstr "月曜日にお会いましょう！"
