--- a/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: 2021-02-06 10:44+0900\n"
+"PO-Revision-Date: 2021-02-06 11:09+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,7 +34,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus Tools for IntelliJ 1.3.0 がリリースされました！\n"
+"title: 'Quarkus Tools for IntelliJ 1.3.0 がリリースされました！'\n"
 "date: 2021-01-15\n"
 "tags: announcement ide\n"
 "author: jeffmaury\n"
