Translate some guides

--- a/i18n/po/ja_JP/_guides/infinispan-embedded.adoc.po
+++ b/i18n/po/ja_JP/_guides/infinispan-embedded.adoc.po
@@ -2,60 +2,49 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-06 15:32+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/infinispan-embedded.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Infinispan Embedded"
 msgstr "Quarkus - Infinispan Embedded"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:13
-#, fuzzy
-msgid ""
-"Infinispan is an elastically scalable in-memory data store that you can "
-"embed directly in your application."
+msgid "Infinispan is an elastically scalable in-memory data store that you can embed directly in your application."
 msgstr "Infinispanは、アプリケーションに直接埋め込むことができる拡張性の高いインメモリデータストアです。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:16
-#, fuzzy
-msgid ""
-"Check out the link:https://infinispan.org/documentation/[Infinispan "
-"documentation] to find out more about the Infinispan project."
-msgstr ""
-"Infinispanプロジェクトの詳細については、Infinispanの link:https://infinispan.org/"
-"documentation/[ドキュメント] をご覧ください。"
+msgid "Check out the link:https://infinispan.org/documentation/[Infinispan documentation] to find out more about the Infinispan project."
+msgstr "Infinispanプロジェクトの詳細については、Infinispanの link:https://infinispan.org/documentation/[ドキュメント] をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-embedded.adoc:19
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Adding the Infinispan Embedded Extension"
-msgstr "Infinispan 埋め込み拡張機能の追加"
+msgstr "Infinispan Embeddedエクステンションの追加"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:21
-#, fuzzy
-msgid ""
-"After you set up your Quarkus project, run the following command from the "
-"base directory:"
-msgstr "Quarkusプロジェクトを設定したら、ベースディレクトリから以下のコマンドを実行します。"
+msgid "After you set up your Quarkus project, run the following command from the base directory:"
+msgstr "Quarkusプロジェクトをセットアップしたら、ベースディレクトリから以下のコマンドを実行します："
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-embedded.adoc:25
@@ -65,9 +54,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:28
-#, fuzzy
 msgid "The command adds the following dependency to your `pom.xml`:"
-msgstr "このコマンドは、以下の依存関係を `pom.xml` ."
+msgstr "このコマンドは、以下の依存関係を `pom.xml` に追加します："
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-embedded.adoc:35
@@ -81,129 +69,100 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/infinispan-embedded.adoc:37
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Feature Support"
 msgstr "機能サポート"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:40
-#, fuzzy
-msgid ""
-"The Infinispan embedded extension offers core caching functionality that "
-"includes clustered caches, off-heap memory, data persistence, and "
-"transactions."
-msgstr ""
-"Infinispan組み込み拡張機能は、クラスタ化キャッシュ、オフヒープメモリ、データ永続化、トランザクションを含むコアキャッシング機能を提供します。"
+msgid "The Infinispan embedded extension offers core caching functionality that includes clustered caches, off-heap memory, data persistence, and transactions."
+msgstr "Infinispan Embeddedエクステンションは、クラスタ化キャッシュ、オフヒープメモリ、データ永続化、トランザクションを含むコアキャッシング機能を提供します。"
 
 #. type: delimited block =
 #: upstream/_guides/infinispan-embedded.adoc:45
-#, fuzzy
-msgid ""
-"The Infinispan embedded extension does not currently support indexing "
-"capabilities."
-msgstr "Infinispan の組み込み拡張機能は、現在のところインデックス機能をサポートしていません。"
+msgid "The Infinispan embedded extension does not currently support indexing capabilities."
+msgstr "Infinispan Embeddedエクステンションは、現在のところインデックス機能をサポートしていません。"
 
 #. type: Title ===
 #: upstream/_guides/infinispan-embedded.adoc:47
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Transactions"
-msgstr "取引"
+msgstr "トランザクション"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:50
-#, fuzzy
-msgid ""
-"Configure Infinispan caches for transactional operations with a specific "
-"`TransactionManagerLookup`, as follows:"
-msgstr ""
-"Infinispan キャッシュを特定の `TransactionManagerLookup` "
-"でトランザクション処理用に設定するには、以下のようにします。"
+msgid "Configure Infinispan caches for transactional operations with a specific `TransactionManagerLookup`, as follows:"
+msgstr "Infinispan キャッシュを特定の `TransactionManagerLookup` でトランザクション処理用に設定するには、以下のようにします。"
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-embedded.adoc:56
 #, no-wrap
 msgid ""
 "<local-cache name=\"quarkus-transaction\">\n"
-"   <transaction transaction-manager-lookup=\"org.infinispan.transaction."
-"lookup.JBossStandaloneJTAManagerLookup\"/>\n"
+"   <transaction transaction-manager-lookup=\"org.infinispan.transaction.lookup.JBossStandaloneJTAManagerLookup\"/>\n"
 "</local-cache>\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:59
-#, fuzzy
-msgid ""
-"For more information, see the Quarkus link:transaction[Transaction Guide]."
-msgstr "詳細については、Quarkus link:transaction[取引ガイド] を参照してください。"
+msgid "For more information, see the Quarkus link:transaction[Transaction Guide]."
+msgstr "詳細については、Quarkus link:transaction[トランザクションガイド] を参照してください。"
 
 #. type: Title ===
 #: upstream/_guides/infinispan-embedded.adoc:60
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Native Limitations"
 msgstr "ネイティブの制限"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:62
-#, fuzzy
 msgid "When running Infinispan in native mode, some limitations apply:"
-msgstr "ネイティブモードでInfinispanを実行する場合、いくつかの制限が適用されます。"
+msgstr "ネイティブモードでInfinispanを実行する場合、いくつかの制限が適用されます："
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:64
-#, fuzzy
 msgid "JMX management is not supported."
 msgstr "JMX管理には対応していません。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:65
-#, fuzzy
 msgid "GraalVM does not allow native VM interfaces."
 msgstr "GraalVMは、ネイティブVMインターフェースを許可していません。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:66
-#, fuzzy
 msgid "`UDP`/`Multicast` is not supported."
 msgstr "`UDP` / `Multicast` はサポートされていません。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:67
-#, fuzzy
-msgid ""
-"You must use `TCP` transport and a non-UDP based membership protocol with "
-"JGroups."
+msgid "You must use `TCP` transport and a non-UDP based membership protocol with JGroups."
 msgstr "JGroupsでは、 `TCP` トランスポートと非UDPベースのメンバーシッププロトコルを使用する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-embedded.adoc:68
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Injection (CDI)"
-msgstr "射出(CDI)"
+msgstr "インジェクション(CDI)"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:71
-#, fuzzy
-msgid ""
-"The Infinispan embedded extension provides injection capabilities so you do "
-"not have to configure and start caches manually."
-msgstr "Infinispan組み込み拡張機能はインジェクション機能を提供するので、手動でキャッシュを設定して起動する必要はありません。"
+msgid "The Infinispan embedded extension provides injection capabilities so you do not have to configure and start caches manually."
+msgstr "Infinispan Embeddedエクステンションはインジェクション機能を提供するので、手動でキャッシュを設定して起動する必要はありません。"
 
 #. type: delimited block =
 #: upstream/_guides/infinispan-embedded.adoc:75
-#, fuzzy
-msgid ""
-"Additional injection functionality will be available in future versions."
+msgid "Additional injection functionality will be available in future versions."
 msgstr "追加のインジェクション機能は、将来のバージョンで利用可能になる予定です。"
 
 #. type: Labeled list
 #: upstream/_guides/infinispan-embedded.adoc:77
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "`EmbeddedCacheManager`"
 msgstr "`EmbeddedCacheManager`"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-embedded.adoc:79
-#, fuzzy
 msgid "This is the main entry point to configure and obtain caches."
 msgstr "キャッシュを設定したり取得したりするためのメインのエントリーポイントです。"
 
@@ -215,8 +174,5 @@ msgstr "設定リファレンス"
 
 #. type: delimited block =
 #: upstream/_guides/infinispan-embedded.adoc:88
-#, fuzzy
-msgid ""
-"JMX elements are disabled during native runtime so you can use the same "
-"configuration file in JVM and native modes."
+msgid "JMX elements are disabled during native runtime so you can use the same configuration file in JVM and native modes."
 msgstr "JMX要素はネイティブ実行時には無効化されるので、JVMとネイティブモードで同じ設定ファイルを使用することができます。"
