Add some translations

--- a/l10n/po/ja_JP/_guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/cache.adoc.po
@@ -3,33 +3,32 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-07 21:04+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/cache.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Application Data Caching"
 msgstr "Quarkus - アプリケーションデータのキャッシング"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:12
-#, fuzzy
 msgid "In this guide, you will learn how to enable application data caching in any CDI managed bean of your Quarkus application."
-msgstr "このガイドでは、QuarkusアプリケーションのCDI管理されたビーンでアプリケーションデータのキャッシングを有効にする方法について説明します。"
+msgstr "このガイドでは、QuarkusアプリケーションのCDI管理されたBeanでアプリケーションデータのキャッシングを有効にする方法について説明します。"
 
 #. type: Title ==
 #: upstream/_guides/cache.adoc:15
@@ -44,9 +43,8 @@ msgstr "このガイドを完成させるには、以下が必要です："
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:20
-#, fuzzy
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15 分未満"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:21
@@ -65,27 +63,25 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/cache.adoc:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Scenario"
 msgstr "シナリオ"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:29
-#, fuzzy
 msgid "Let's imagine you want to expose in your Quarkus application a REST API that allows users to retrieve the weather forecast for the next three days.  The problem is that you have to rely on an external meteorological service which only accepts requests for one day at a time and takes forever to answer.  Since the weather forecast is updated once every twelve hours, caching the service responses would definitely improve your API performances."
 msgstr "Quarkusアプリケーションで、ユーザーが今後3日間の天気予報を取得できるREST APIを公開したいとします。問題は、一度に1日分のリクエストしか受け付けず、応答に時間がかかる外部の気象サービスに依存しなければならないことです。天気予報は12時間に一度更新されるので、サービスのレスポンスをキャッシュすればAPIのパフォーマンスは間違いなく向上します。"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:31
-#, fuzzy
 msgid "We'll do that using a single Quarkus annotation."
 msgstr "これをQuarkusの単一のアノテーションを使用して行います。"
 
 #. type: Title ==
 #: upstream/_guides/cache.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:36
@@ -99,19 +95,17 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:40
-#, fuzzy
 msgid "The solution is located in the `cache-quickstart` {quickstarts-tree-url}/cache-quickstart[directory]."
 msgstr "ソリューションは `cache-quickstart` {quickstarts-tree-url}/cache-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/cache.adoc:41
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:44
-#, fuzzy
 msgid "First, we need to create a new Quarkus project using Maven with the following command:"
 msgstr "まず、以下のコマンドでMavenを使って新しいQuarkusプロジェクトを作成します。"
 
@@ -129,15 +123,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:56
-#, fuzzy
 msgid "This command generates the Maven project with a REST endpoint and imports the `cache` and `resteasy-jackson` extensions."
-msgstr "このコマンドは、REST エンドポイントを持つ Maven プロジェクトを生成し、 `cache` と `resteasy-jackson` の拡張子をインポートします。"
+msgstr "このコマンドは、REST エンドポイントを持つ Maven プロジェクトを生成し、 `cache` と `resteasy-jackson` のエクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:59
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `cache` extension to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに `cache` 拡張機能を追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに `cache` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/cache.adoc:63
@@ -162,13 +154,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/cache.adoc:75
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the REST API"
 msgstr "REST APIの作成"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:79
-#, fuzzy
 msgid "Let's start by creating a service that will simulate an extremely slow call to the external meteorological service.  Create `src/main/java/org/acme/cache/WeatherForecastService.java` with the following content:"
 msgstr "まずは、外部気象サービスへの非常に遅い呼び出しをシミュレートするサービスを作成してみましょう。以下の内容で `src/main/java/org/acme/cache/WeatherForecastService.java` を作成します。"
 
@@ -240,15 +231,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:117
-#, fuzzy
 msgid "This is where the slowness comes from."
-msgstr "遅さの由来はここにあります。"
+msgstr "遅さはここに由来します。"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:120
-#, fuzzy
 msgid "We also need a class that will contain the response sent to the users when they ask for the next three days weather forecast.  Create `src/main/java/org/acme/cache/WeatherForecast.java` this way:"
-msgstr "また、ユーザーが次の3日間の天気予報を求めたときに送信されるレスポンスを含むクラスも必要です。 `src/main/java/org/acme/cache/WeatherForecast.java` をこのように作成します。"
+msgstr "また、ユーザーが次の3日間の天気予報を求めたときに送信されるレスポンスを含むクラスも必要です。 `src/main/java/org/acme/cache/WeatherForecast.java` をこのように作成します："
 
 #. type: delimited block -
 #: upstream/_guides/cache.adoc:126
@@ -305,9 +294,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:149
-#, fuzzy
 msgid "Now, we just need to update the generated `WeatherForecastResource` class to use the service and response:"
-msgstr "あとは、サービスとレスポンスを使用するために生成された `WeatherForecastResource` クラスを更新するだけです。"
+msgstr "あとは、サービスとレスポンスを使用するようにに生成された `WeatherForecastResource` クラスを更新するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/cache.adoc:157
