--- a/l10n/po/ja_JP/_guides/0-glossary.adoc.po
+++ b/l10n/po/ja_JP/_guides/0-glossary.adoc.po
@@ -3,36 +3,35 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-07 20:55+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Title =
 #: upstream/_guides/0-glossary.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Glossary"
 msgstr "用語集"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:7
-#, fuzzy
 msgid "This is a collection of preferred term in the documentation and website.  Please stay within these terms for consistency."
 msgstr "ドキュメントやウェブサイトで好まれる用語を集めたものです。一貫性を保つために、これらの用語の範囲内にとどめてください。"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "* Live coding"
-msgstr "ライブコーディング"
+msgstr "* ライブコーディング"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:9
