--- a/l10n/po/ja_JP/_guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute.adoc.po
@@ -63,7 +63,7 @@ msgstr "まずはとてもシンプルなテンプレートから。"
 #: upstream/_guides/qute.adoc:35
 #, fuzzy, no-wrap
 msgid "hello.txt"
-msgstr "ハローテキスト"
+msgstr "hello.text"
 
 #. type: delimited block -
 #: upstream/_guides/qute.adoc:39 upstream/_guides/qute.adoc:103
