Add machine translation

--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -500,9 +500,9 @@ msgstr "メトリクスは怠惰に表示され、何かがアクセスしよう
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:285
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using MeterFilter to configure metrics"
-msgstr ""
+msgstr "MeterFilter を使ってメトリクスを設定する"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:290
