--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -1241,24 +1241,27 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-sql-clients.adoc:619
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "TCP Connection `idle-timeout`"
-msgstr ""
+msgstr "TCP接続 `idle-timeout`"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:622
+#, fuzzy
 msgid "Reactive datasources can be configured with an `idle-timeout` (in milliseconds) that applies at the TCP connection level."
-msgstr ""
+msgstr "リアクティブなデータソースは、TCP 接続レベルで適用される `idle-timeout` (ミリ秒単位) を使用して構成することができます。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:624
+#, fuzzy
 msgid "The `idle-timeout` is disabled by default."
-msgstr ""
+msgstr "`idle-timeout` はデフォルトでは無効になっています。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:626
+#, fuzzy
 msgid "For example, you could expire idle connections after 60 minutes:"
-msgstr ""
+msgstr "例えば、アイドル状態の接続を60分後に失効させることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-sql-clients.adoc:630
@@ -1268,23 +1271,27 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/reactive-sql-clients.adoc:635
+#, fuzzy
 msgid "This timeout does not apply to the pool, but to the TCP connection."
-msgstr ""
+msgstr "このタイムアウトはプールには適用されず、TCP 接続にも適用されます。"
 
 #. type: delimited block =
 #: upstream/_guides/reactive-sql-clients.adoc:637
+#, fuzzy
 msgid "If it expires while the connection is idle in the pool, the connection is closed and removed from the pool."
-msgstr ""
+msgstr "プール内で接続がアイドル状態の間に有効期限が切れた場合、接続は閉じられ、プールから削除されます。"
 
 #. type: delimited block =
 #: upstream/_guides/reactive-sql-clients.adoc:639
+#, fuzzy
 msgid "If it expires immediately after your borrowed the connection from the pool and before you execute a query, you will get an error."
-msgstr ""
+msgstr "プールから接続を借りた直後で、クエリを実行する前に期限切れになった場合は、エラーが発生します。"
 
 #. type: delimited block =
 #: upstream/_guides/reactive-sql-clients.adoc:642
+#, fuzzy
 msgid "While this is unlikely to happen, you must be prepared for such eventuality:"
-msgstr ""
+msgstr "このようなことが起こる可能性は低いですが、そのような不測の事態に備えて準備をしておく必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-sql-clients.adoc:649
