--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -123,13 +123,15 @@ msgstr "このコマンドは、REST エンドポイントを持つ Maven プロ
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:51
+#, fuzzy
 msgid "the `resteasy` and `resteasy-jackson` extensions for the REST server support;"
-msgstr ""
+msgstr "REST サーバーのサポートのために `resteasy` と `resteasy-jackson` の拡張子を使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:52
+#, fuzzy
 msgid "the `rest-client` and `rest-client-jackson` extensions for the REST client support."
-msgstr ""
+msgstr "REST クライアントのサポートのために `rest-client` と `rest-client-jackson` の拡張機能を使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:55
