--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -621,10 +621,12 @@ msgstr "link:security[Quarkusのセキュリティ]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:347
+#, fuzzy
 msgid "link:security-openid-connect[Quarkus - Using OpenID Connect to Protect Service Applications using Bearer Token Authorization]"
-msgstr ""
+msgstr "link:security-openid-connect[Quarkus - OpenID Connectを使用したベアラートークン認証を使用したサービスアプリケーションの保護]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:347
+#, fuzzy
 msgid "link:security-openid-connect-web-authentication[Quarkus - Using OpenID Connect to Protect Web Applications using Authorization Code Flow]"
-msgstr ""
+msgstr "link:security-openid-connect-web-authentication[Quarkus - OpenID Connectを使用して、認証コードフローを使用してWebアプリケーションを保護する]"
