--- a/l10n/po/ja_JP/_guides/platform.adoc.po
+++ b/l10n/po/ja_JP/_guides/platform.adoc.po
@@ -380,23 +380,27 @@ msgstr "Quarkusプラットフォームのプロパティ"
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:155
+#, fuzzy
 msgid "In case an application is importing more than one Quarkus platform and those platforms include their own platform properties artifacts, the content of those platform properties artifacts will be merged to form a single set of properties that will be used for the application build.  The order in which the properties artifacts are merged will correspond to the order in which they appear in the list of dependency version constraints of the application (in the Maven terms that will correspond to the effective list of application's managed dependencies, i.e. the flattened `managedDependencies` POM section)."
-msgstr ""
+msgstr "アプリケーションが複数のQuarkusプラットフォームをインポートしていて、それらのプラットフォームに独自のプラットフォームプロパティの成果物が含まれている場合、それらのプラットフォームプロパティの成果物の内容は、アプリケーションのビルドに使用される単一のプロパティのセットを形成するためにマージされます。プロパティの成果物がマージされる順序は、アプリケーションの依存関係バージョン制約のリストに表示される順序に対応します（Mavenの用語では、アプリケーションの管理された依存関係の有効なリスト、つまり、平坦化された `managedDependencies` POMセクションに対応します）。"
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:157
+#, fuzzy
 msgid "The content of the properties artifacts found earlier will dominate over those found later among the application's dependency constraints!"
-msgstr ""
+msgstr "以前に発見されたプロパティの成果物の内容は、アプリケーションの依存性制約の中で後に発見されたものよりも支配的になります!"
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:159
+#, fuzzy
 msgid "That means if a platform needs to override a certain property value defined in the platform it is based on, it will need to include its platform properties artifact into the `managedDependencies` section of its BOM before importing the base platform."
-msgstr ""
+msgstr "つまり、プラットフォームがベースとなるプラットフォームで定義されている特定のプロパティ値を上書きする必要がある場合は、ベースとなるプラットフォームをインポートする前に、そのプラットフォームのプロパティをBOMの `managedDependencies` セクションに含める必要があるということです。"
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:161
+#, fuzzy
 msgid "For example, the `quarkus-universe-bom` platform is based on the `quarkus-bom` platform. In case, the `quarkus-universe-bom` platform were to override certain properties defined in `quarkus-bom-quarkus-platform-properties` included into the `quarkus-bom` platform, the `quarkus-universe-bom` would have to be composed as"
-msgstr ""
+msgstr "例えば、 `quarkus-universe-bom` プラットフォームは `quarkus-bom` プラットフォームをベースにしています。 `quarkus-universe-bom` プラットフォームが `quarkus-bom` プラットフォームに含まれる `quarkus-bom-quarkus-platform-properties` で定義されている特定のプロパティをオーバーライドする場合、 `quarkus-universe-bom` は次のように構成されなければなりません。"
 
 #. type: delimited block -
 #: upstream/_guides/platform.adoc:164 upstream/_guides/platform.adoc:189
@@ -444,5 +448,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/platform.adoc:191
+#, fuzzy
 msgid "That way, the `quarkus-universe-bom` platform properties will appear before the `quarkus-bom` platform properties and so will be dominating during merging."
-msgstr ""
+msgstr "そうすると、 `quarkus-universe-bom` プラットフォームのプロパティが `quarkus-bom` プラットフォームのプロパティの前に表示されるので、マージの際に優位になります。"
