--- a/l10n/po/ja_JP/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.11.2.Final released - Bugfixes'\n"
@@ -34,87 +34,106 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: Quarkus 1.11.2.Finalリリース - バグフィックス\n"
+"date: 2021-02-09\n"
+"tags: release\n"
+"synopsis: 1.11.2.Finalでは問題を修正し、ドキュメントの改善を行いました。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:11
+#, fuzzy
 msgid "1.11.2.Final is a maintenance release fixing bugs and improving the documentation."
-msgstr ""
+msgstr "1.11.2.Finalは、バグの修正とドキュメントの改善を行うメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:13
+#, fuzzy
 msgid "It is a safe upgrade for everyone using Quarkus 1.11."
-msgstr ""
+msgstr "これは、Quarkus 1.11を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:15
+#, fuzzy
 msgid "If you are not using 1.11 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.11[1.11 migration guide]."
-msgstr ""
+msgstr "すでに1.11を使用していない場合は、1. link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.11[11移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:16
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "何が新しいの？"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Hibernate ORM"
-msgstr ""
+msgstr "ハイバネートＯＲＭ"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:21
+#, fuzzy
 msgid "We upgraded to Hibernate ORM 5.4.27.SP1 which fixes an important issue, potentially causing data losses."
-msgstr ""
+msgstr "Hibernate ORM 5.4.27.SP1にアップグレードしたところ、データ損失を引き起こす可能性のある重要な問題が修正されました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:23
+#, fuzzy
 msgid "Thus the upgrade is highly recommended."
-msgstr ""
+msgstr "したがって、アップグレードは非常にお勧めです。"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Full changelog"
-msgstr ""
+msgstr "フルチェンジログ"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:27
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.11.2.Final[the full changelog of 1.11.2.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.11.2.Final[1.11.2.Finalの完全な変更履歴はGitHubで]入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:28
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "私たちと一緒に来てください"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:31
+#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私たちはあなたのフィードバックをとても大切にしていますので、バグを報告したり、改善をお願いしたり...一緒に素晴らしいものを作りましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:33
+#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusのユーザーの方、または好奇心旺盛な方は、恥ずかしがらずに当社の歓迎するコミュニティに参加してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:35
+#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバックを提供します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:36
+#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "いくつかのコードを作成し、 link:https://github.com/quarkusio/quarkus/pulls[PRをプッシュします]。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:37
+#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論しましょう。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:38
+#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "Stack link:https://stackoverflow.com/questions/tagged/quarkus[Overflow]で質問をしてみましょう。"
