Translates _posts/2021-02-09-quarkus-1-11-2-final-released.adoc.po

--- a/l10n/po/ja_JP/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-11 02:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-11 11:30+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.11.2.Final released - Bugfixes'\n"
@@ -44,96 +44,84 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:11
-#, fuzzy
 msgid "1.11.2.Final is a maintenance release fixing bugs and improving the documentation."
 msgstr "1.11.2.Finalは、バグの修正とドキュメントの改善を行うメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:13
-#, fuzzy
 msgid "It is a safe upgrade for everyone using Quarkus 1.11."
 msgstr "これは、Quarkus 1.11を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:15
-#, fuzzy
 msgid "If you are not using 1.11 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.11[1.11 migration guide]."
-msgstr "すでに1.11を使用していない場合は、1. link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.11[11移行ガイド]を参照してください。"
+msgstr "まだ1.11を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.11[1.11移行ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "What's new?"
-msgstr "何が新しいの？"
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:18
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Hibernate ORM"
-msgstr "ハイバネートＯＲＭ"
+msgstr "Hibernate ORM"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:21
-#, fuzzy
 msgid "We upgraded to Hibernate ORM 5.4.27.SP1 which fixes an important issue, potentially causing data losses."
-msgstr "Hibernate ORM 5.4.27.SP1にアップグレードしたところ、データ損失を引き起こす可能性のある重要な問題が修正されました。"
+msgstr "Hibernate ORM 5.4.27.SP1にアップグレードし、データ損失を引き起こす可能性のある重要な問題が修正されました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:23
-#, fuzzy
 msgid "Thus the upgrade is highly recommended."
-msgstr "したがって、アップグレードは非常にお勧めです。"
+msgstr "したがって、アップグレードを強くお勧めします。"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Full changelog"
-msgstr "フルチェンジログ"
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:27
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.11.2.Final[the full changelog of 1.11.2.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.11.2.Final[1.11.2.Finalの完全な変更履歴はGitHubで]入手できます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.11.2.Final[GitHub上で1.11.2.Finalの完全な変更履歴]を入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:28
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Come Join Us"
-msgstr "私たちと一緒に来てください"
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:31
-#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr "私たちはあなたのフィードバックをとても大切にしていますので、バグを報告したり、改善をお願いしたり...一緒に素晴らしいものを作りましょう!"
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう！"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:33
-#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr "Quarkusのユーザーの方、または好奇心旺盛な方は、恥ずかしがらずに当社の歓迎するコミュニティに参加してください。"
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい！："
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:35
-#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr "link:https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバックを提供します。"
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:36
-#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr "いくつかのコードを作成し、 link:https://github.com/quarkusio/quarkus/pulls[PRをプッシュします]。"
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:37
-#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論しましょう。"
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc:38
-#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr "Stack link:https://stackoverflow.com/questions/tagged/quarkus[Overflow]で質問をしてみましょう。"
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
