Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-all-config.adoc.po
@@ -12674,7 +12674,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-all-config.adoc:7258
 #, no-wrap
 msgid "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
-msgstr ""
+msgstr "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-all-config.adoc:6949
