--- a/l10n/po/ja_JP/_generated-config/config/quarkus-container-image-jib.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-container-image-jib.adoc.po
@@ -110,7 +110,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-container-image-jib.adoc:38
 #, no-wrap
 msgid "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
-msgstr ""
+msgstr "`-Djava.util.logging.manager=org.jboss.logmanager.LogManager`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-container-image-jib.adoc:43
