Add machine translation

--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -2806,8 +2806,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:1363
+#, fuzzy
 msgid "If you need to make your build step conditional on the presence or absence of another extension, you can use <<capabilities>> for that."
-msgstr ""
+msgstr "他の拡張機能の有無に条件をつけてビルドステップを行う必要がある場合は、 link:#capabilities[[capabilities]を]使用することができます。"
 
 #. type: Title ===
 #: upstream/_guides/writing-extensions.adoc:1365
